site: fix: header items not vertically centered

--- a/site/src/layout_template.html.ejs
+++ b/site/src/layout_template.html.ejs
@@ -39,7 +39,7 @@
         <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav">
         </ul>
 
-        <ul class="navbar-nav flex-row flex-wrap ms-md-auto gap-2">
+        <ul class="navbar-nav flex-row flex-wrap align-items-center ms-md-auto gap-2">
           <li class="nav-item dropdown col-6 col-lg-auto">
             <button
               type="button"
@@ -59,7 +59,7 @@
           </li>
           <li class="nav-item col-6 col-lg-auto">
             <a
-              class="nav-link py-2 px-0 px-lg-2 iti-navlink-no-shift <% if (pageType === 'playground') { %>active<% } %>"
+              class="nav-link d-inline-flex align-items-center py-2 px-0 px-lg-2 iti-navlink-no-shift <% if (pageType === 'playground') { %>active<% } %>"
               href="/playground"
             ><span data-text="Playground">Playground</span></a>
           </li>
