--- a/site/src/examples/examples_content_template.html.ejs
+++ b/site/src/examples/examples_content_template.html.ejs
@@ -34,7 +34,7 @@
   <pre><code class="language-javascript"><%- code %></code></pre>
 </div>
 
-<%= bootstrap_script %>
+<%= common_body_end %>
 <% if (typeof iti_script !== 'undefined') { %>
   <%= iti_script %>
 <% } %>
