--- a/site/src/examples/examples_page_template.html.ejs
+++ b/site/src/examples/examples_page_template.html.ejs
@@ -22,7 +22,7 @@
       <link rel="stylesheet" href="<%= cacheBust(stylesheet_after_demo_css) %>">
     <% } %>
 
-    <%= analytics %>
+    <%= common_head_end %>
   </head>
 
   <body>
