--- a/site/src/css/large_flags_overrides.scss
+++ b/site/src/css/large_flags_overrides.scss
@@ -4,8 +4,8 @@
   --iti--search-clear-icon-height: 16px;
   --iti-arrow-height: 5px;
   --iti-arrow-padding: 9px;
-  --iti-path-flags-1x: url('/img/largeFlags.webp');
-  --iti-path-flags-2x: url('/img/largeFlags@2x.webp');
+  --iti-path-flags-1x: url("<%= cacheBust('/img/largeFlags.webp') %>");
+  --iti-path-flags-2x: url("<%= cacheBust('/img/largeFlags@2x.webp') %>");
 }
 .iti {
   font-size: 20px;
