site: vue example uses validation

--- a/site/src/examples/js/vue_component.vue.ejs
+++ b/site/src/examples/js/vue_component.vue.ejs
@@ -1,13 +1,41 @@
 <script setup>
   import { ref } from "vue";
-  import IntlTelInput from "intl-tel-input/vue";
+  import IntlTelInput from "../../../build/intl-tel-input/vue/exports/IntlTelInput.mjs";
+
+  const errorMap = [
+    "Invalid number",
+    "Invalid country code",
+    "Too short",
+    "Too long",
+    "Invalid number",
+  ];
+
+  const isValid = ref(null);
+  const number = ref(null);
+  const errorCode = ref(null);
+  const notice = ref(null);
+
+  const handleSubmit = () => {
+    if (isValid.value) {
+      notice.value = `Valid number: ${number.value}`;
+    } else {
+      const errorMessage = errorMap[errorCode.value || 0] || "Invalid number";
+      notice.value = `Error: ${errorMessage}`;
+    }
+  };
 </script>
 
 <template>
-  <IntlTelInput
-    :options="{
-      initialCountry: 'us',
-      loadUtils: () => import('<%= cacheBust('/intl-tel-input/js/utils.js') %>'),
-    }"
-  />
+  <form @submit.prevent="handleSubmit">
+    <IntlTelInput
+      @changeNumber="number = $event"
+      @changeValidity="isValid = $event"
+      @changeErrorCode="errorCode = $event"
+      :options="{
+        initialCountry: 'us',
+        loadUtils: () => import('<%= cacheBust('/intl-tel-input/js/utils.js') %>'),
+      }"
+    /> <button class="button" type="submit">Validate</button>
+    <div v-if="notice" class="notice">{{ notice }}</div>
+  </form>
 </template>
