--- a/site/src/examples/js/react_component.js.ejs
+++ b/site/src/examples/js/react_component.js.ejs
@@ -1,6 +1,6 @@
 import React, { useState, ReactElement } from "react";
 import { createRoot } from "react-dom/client";
-import IntlTelInput from "../../../build/intl-tel-input/react/IntlTelInput";
+import IntlTelInput from "../../../build/intl-tel-input/react/IntlTelInput.js";
 
 const errorMap = [
   "Invalid number",
