--- a/site/src/docs/docs_page_template.html.ejs
+++ b/site/src/docs/docs_page_template.html.ejs
@@ -6,6 +6,8 @@
     <link rel="canonical" href="https://intl-tel-input.com/<%= canonical_path %>" />
     <meta name="description" content="<%= meta_desc %>">
 
+    <%= og_meta_tags %>
+
     <%= bootstrap_styles %>
 
     <link rel="stylesheet" href="/css/highlight-github-light.min.css" media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)">
