--- a/site/src/examples/examples_page_template.html.ejs
+++ b/site/src/examples/examples_page_template.html.ejs
@@ -6,6 +6,8 @@
     <link rel="canonical" href="https://intl-tel-input.com/<%= canonical_path %>" />
     <meta name="description" content="An example use of International Telephone Input. <%= meta_desc %>">
 
+    <%= og_meta_tags %>
+
     <%= bootstrap_styles %>
     <% if (typeof omit_iti_styles === 'undefined') { %>
       <%= iti_styles %>
