--- a/site/src/homepage/homepage_template.html.ejs
+++ b/site/src/homepage/homepage_template.html.ejs
@@ -8,6 +8,7 @@
       name="description"
       content="International Telephone Input - a JavaScript plugin for entering international telephone numbers."
     />
+    <%= og_meta_tags %>
     <%= bootstrap_styles %>
 
     <!-- ITI styles - show largeFlags version on desktop -->
