--- a/site/src/playground/playground_template.html.ejs
+++ b/site/src/playground/playground_template.html.ejs
@@ -8,6 +8,8 @@
       name="description"
       content="intl-tel-input playground - interactively tweak init options and see the plugin update live."
     />
+
+    <%= og_meta_tags %>
     <%= bootstrap_styles %>
     <%= iti_styles %>
 
