--- a/site/src/examples/js/svelte_component_display_code.svelte.ejs
+++ b/site/src/examples/js/svelte_component_display_code.svelte.ejs
@@ -15,7 +15,8 @@
   let errorCode = $state(null);
   let notice = $state(null);
 
-  const handleSubmit = () => {
+  const handleSubmit = (event) => {
+    event.preventDefault();
     if (isValid) {
       notice = `Valid number: ${number}`;
     } else {
@@ -25,14 +26,17 @@
   };
 </script>
 
-<form>
+<form onsubmit={handleSubmit}>
   <IntlTelInput
     onChangeNumber={(n) => (number = n)}
     onChangeValidity={(v) => (isValid = v)}
     onChangeErrorCode={(e) => (errorCode = e)}
-    options={{ initialCountry: "us" }}
+    options={{
+      initialCountry: "us",
+      loadUtils: () => import("intl-tel-input/utils"),
+    }}
   />
-  <button class="button" type="button" onclick={handleSubmit}>Validate</button>
+  <button class="button" type="submit">Validate</button>
   {#if notice}
     <div class="notice">{notice}</div>
   {/if}
