--- a/site/src/examples/js/internationalisation_display_code.js.ejs
+++ b/site/src/examples/js/internationalisation_display_code.js.ejs
@@ -7,5 +7,5 @@ intlTelInput(input, {
   i18n: ru,
   initialCountry: "ru", // Russia
   countryNameLocale: "ru", // Russian
-  loadUtils: () => import("<%= cacheBust('/intl-tel-input/js/utils.js') %>") // for formatting/placeholders etc
+  loadUtils: () => import("intl-tel-input/utils")
 });
