--- a/site/src/css/_base.scss
+++ b/site/src/css/_base.scss
@@ -18,6 +18,15 @@ p img {
   vertical-align: baseline;
 }
 
+h2,
+h3 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+h1 {
+  margin-bottom: 20px;
+}
+
 /* bootstrap override */
 @media (min-width: 1200px) {
   .h2,
@@ -47,4 +56,32 @@ p img {
   background-color: rgb(var(--header-bg-color-rgb) / 0.3);
   font-style: italic;
   text-align: left;
+}
+
+/* Page breadcrumb (Docs/Examples) */
+.iti-breadcrumb {
+  margin-bottom: 0.25rem;
+  font-size: 0.875rem;
+  color: var(--bs-secondary-color);
+
+  &__list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  &__item + &__item::before {
+    content: "/";
+    opacity: 0.6;
+    padding: 0 0.4rem;
+  }
+  a {
+    color: inherit;
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
