site: load playground and homepage styles separately

--- a/site/src/homepage/homepage_template.html.ejs
+++ b/site/src/homepage/homepage_template.html.ejs
@@ -17,6 +17,7 @@
 
     <!-- website styles must come after ITI styles as contains dark mode overrides -->
     <link rel="stylesheet" href="<%= cacheBust('/css/website.css') %>" />
+    <link rel="stylesheet" href="<%= cacheBust('/css/homepage.css') %>" />
 
     <!-- large flags overrides must come after website styles -->
     <link rel="stylesheet" href="<%= cacheBust('/css/large_flags_overrides.css') %>" media="screen and (min-width: 769px)">
