--- a/site/src/playground/playground_template.html.ejs
+++ b/site/src/playground/playground_template.html.ejs
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/css/highlight-github-dark.min.css" media="(prefers-color-scheme: dark)">
 
     <link rel="stylesheet" href="<%= cacheBust('/css/website.css') %>" />
+    <link rel="stylesheet" href="<%= cacheBust('/css/playground.css') %>" />
 
     <%= common_head_end %>
   </head>
