site: style fix

--- a/site/src/css/_base.scss
+++ b/site/src/css/_base.scss
@@ -85,3 +85,8 @@ h1 {
     }
   }
 }
+
+// prevent layout shift when initialise components / show validation errors in demos
+#app {
+  min-height: 62px;
+}
