docs(angular): add visual feedback for disabled submit button

--- a/site/src/examples/js/angular_component.ts.ejs
+++ b/site/src/examples/js/angular_component.ts.ejs
@@ -16,8 +16,14 @@ import { IntlTelInputComponent } from "../../../build/intl-tel-input/angular/Int
         [initOptions]="initOptions"
       />
       <span>&nbsp;</span>
-      <button class="button" type="submit" [disabled]="!fg.valid">
-        Validate
+      <button
+        class="button"
+        type="submit"
+        [disabled]="!fg.valid"
+        [style.opacity]="fg.valid ? '1' : '0.5'"
+        [style.cursor]="fg.valid ? 'pointer' : 'not-allowed'"
+      >
+          Validate
       </button>
       <div class="notice">
         @if (phone?.errors?.["required"] && phone?.touched) {
@@ -52,7 +58,6 @@ export class AppComponent {
   }
 
   handleSubmit(): void {
-    this.phone?.markAsTouched();
     if (this.fg.valid) {
       this.notice = `Valid number: ${this.telInput.getInstance()?.getNumber()}`;
     }
