site: use bootstrap styling for plugin input/button examples

--- a/site/src/css/large_flags_overrides.scss
+++ b/site/src/css/large_flags_overrides.scss
@@ -17,6 +17,9 @@
 .iti input {
   height: 44px;
 }
+.iti__tel-input {
+  font-size: inherit !important; // bootstrap override
+}
 .iti__search-icon {
   left: 13px;
 }
