site: example page ads

--- a/site/src/examples/examples_content_template.html.ejs
+++ b/site/src/examples/examples_content_template.html.ejs
@@ -24,13 +24,13 @@
 
 <% if (typeof hideMarkupSection === 'undefined') { %>
 <div class="section">
-  <h2>Markup</h2>
+  <h2>Html</h2>
   <pre><code class="language-html"><%- markup %></code></pre>
 </div>
 <% } %>
 
 <div class="section">
-  <h2>Code</h2>
+  <h2>JavaScript</h2>
   <pre><code class="language-javascript"><%- code %></code></pre>
 </div>
 
@@ -39,3 +39,13 @@
   <%= iti_script %>
 <% } %>
 <script src="<%= cacheBust('/examples/js/' + script) %>"></script>
+
+<div class="article-ad">
+  <ins class="adsbygoogle"
+    style="display:block; text-align:center;"
+    data-ad-layout="in-article"
+    data-ad-format="fluid"
+    data-ad-client="ca-pub-1090343328224651"
+    data-ad-slot="6972377388"></ins>
+  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+</div>
