--- a/site/src/homepage/homepage_page_template.html.ejs
+++ b/site/src/homepage/homepage_page_template.html.ejs
@@ -12,7 +12,7 @@
     <%= bootstrap_styles %>
 
     <!-- ITI styles - show largeFlags version on desktop -->
-    <link rel="stylesheet" href="<%= cacheBust('/intl-tel-input/css/intlTelInput.css') %>" media="screen and (max-width: 768px)">
+    <link rel="stylesheet" href="<%= cacheBust('/intl-tel-input/css/intlTelInput.min.css') %>" media="screen and (max-width: 768px)">
     <link rel="stylesheet" href="<%= cacheBust('/css/intlTelInput-largeFlags.css') %>" media="screen and (min-width: 769px)">
 
     <!-- website styles must come after ITI styles as contains dark mode overrides -->
