site: fix a11y issues, add logo

--- a/site/src/layout_template.html.ejs
+++ b/site/src/layout_template.html.ejs
@@ -28,12 +28,15 @@
     </div>
 
     <!-- HEADER BRAND (MOBILE: CENTERED, DESKTOP: LHS) -->
-    <a class="navbar-brand me-0" href="/">intl-tel-input</a>
+    <a class="navbar-brand me-0 d-flex" href="/">
+      <img src="/img/logo-white.png" alt="intl-tel-input logo" width="32" height="32">
+      intl-tel-input
+    </a>
 
     <div class="d-flex"></div>
 
     <!-- HEADER RHS NAV (MOBILE: HIDDEN, DESKTOP: VISIBLE) -->
-    <div class="offcanvas-lg offcanvas-end flex-grow-1" tabindex="-1" id="bdNavbar" aria-labelledby="bdNavbarOffcanvasLabel">
+    <div class="offcanvas-lg offcanvas-end flex-grow-1" tabindex="-1" id="bdNavbar">
       <div class="offcanvas-body p-4 pt-0 p-lg-0">
 
         <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav">
