--- a/site/src/css/_navbar.scss
+++ b/site/src/css/_navbar.scss
@@ -1,7 +1,8 @@
 /* TOP NAVBAR */
 .iti-navbar {
   padding: 0.75rem 0;
-  background-color: rgb(var(--header-bg-color-rgb));
+  background-image: linear-gradient(rgb(var(--header-bg-color-rgb) / 1), rgb(var(--header-bg-color-rgb) / 0.95));
+  box-shadow: 0 .5rem 1rem #00000026;
 
   .navbar-toggler {
     padding: 0;
@@ -18,6 +19,15 @@
     border: solid currentColor;
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
+  }
+
+  // cute spinny logo animation on hover
+  .navbar-brand img {
+    margin-right: 10px;
+    transition: transform 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
+  }
+  .navbar-brand:hover img {
+    transform: rotate(360deg) scale(1.1);
   }
 }
 
