--- a/site/src/examples/js/multiple_instances.js.ejs
+++ b/site/src/examples/js/multiple_instances.js.ejs
@@ -13,6 +13,7 @@ window.intlTelInput(inputMobile, {
   loadUtils: () => import("<%= cacheBust('/intl-tel-input/js/utils.js') %>"),
 });
 window.intlTelInput(inputVacation, {
+  initialCountry: 'es',
   onlyCountries: ['es', 'fr', 'it'],
   loadUtils: () => import("<%= cacheBust('/intl-tel-input/js/utils.js') %>"),
 });
